--- a/.github/actions/setup-go/action.yml
+++ b/.github/actions/setup-go/action.yml
@@ -1,24 +1,15 @@
 name: 'Setup Go Environment'
-description: 'Checkout code, install Go, download and verify module dependencies'
+description: 'Install Go, download and verify module dependencies'
 
 inputs:
   go-version:
     description: 'Go version to install'
     required: false
     default: '1.24'
-  fetch-depth:
-    description: 'Number of commits to fetch (0 for full history)'
-    required: false
-    default: '1'
 
 runs:
   using: 'composite'
   steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: ${{ inputs.fetch-depth }}
-
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
