--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
         go-version: ['1.24', '1.25']
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
       with:
@@ -62,6 +68,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
 
@@ -76,6 +85,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
 
@@ -95,6 +107,9 @@ jobs:
     needs: [test, lint]
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
 
