--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,10 +21,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
-      with:
-        fetch-depth: '0'
 
     - name: Install goimports
       run: go install golang.org/x/tools/cmd/goimports@latest
@@ -116,6 +119,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
 
