--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,13 @@ jobs:
       github.event_name == 'workflow_dispatch'
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
-      with:
-        fetch-depth: '0'
 
     - name: Get latest semver tag
       id: latest_tag
