fix(ci): Add explicit go build step to PR workflow to validate build before merging to main.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,6 +42,9 @@ jobs:
         fi
         echo "Code is properly formatted"
 
+    - name: Build
+      run: go build -v ./...
+
     - name: Run go vet
       run: go vet ./...
 
