--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,13 @@ name: CI
 on:
   push:
     branches: [ master, main, develop ]
-  pull_request:
-    branches: [ master, main, develop ]
 
 permissions:
   contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -17,23 +19,19 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go-version: ['1.21', '1.22', '1.23']
+        go-version: ['1.24', '1.25']
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
       with:
         go-version: ${{ matrix.go-version }}
-        cache: true
-
-    - name: Download dependencies
-      run: go mod download
-
-    - name: Verify dependencies
-      run: go mod verify
 
     - name: Run go vet
       run: go vet ./...
@@ -52,18 +50,12 @@ jobs:
           exit 1
         fi
 
-    - name: Run tests (Unix)
-      if: runner.os != 'Windows'
-      run: go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
-
-    - name: Run tests (Windows)
-      if: runner.os == 'Windows'
-      shell: cmd
+    - name: Run tests
       run: go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
 
     - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.23'
-      uses: codecov/codecov-action@v4
+      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.25'
+      uses: codecov/codecov-action@v5
       with:
         files: ./coverage.out
         flags: unittests
@@ -79,16 +71,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v8
       with:
-        version: latest
+        version: v2.5.0
         args: --timeout=5m
 
   security:
@@ -99,14 +88,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Run Gosec Security Scanner
-      uses: securego/gosec@master
+      uses: securego/gosec@v2.23.0
       with:
         args: './...'
 
@@ -124,11 +110,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Build
       run: go build -v ./...
