fix(ci): resolve PowerShell test failure and adopt Go 1.22+ integer ranges
  Add shell: bash to the cross-platform test step in ci.yml to prevent
  PowerShell from misinterpreting go test flags with = signs.
  Remove duplicate checkout step introduced by prior refactor.
  Update three for loops flagged by the intrange linter to use Go 1.22+ integer range syntax.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Checkout code
-      uses: actions/checkout@v4
-
     - name: Setup Go environment
       uses: ./.github/actions/setup-go
       with:
@@ -51,6 +48,7 @@ jobs:
         fi
 
     - name: Run tests
+      shell: bash
       run: go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
 
     - name: Upload coverage to Codecov
